añadiendo foto y corrigiendo error de encabezado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="invitation">
         <h3>Nuestra Boda</h3>
         <h1 class="couple">Mitchel & Carlos</h1>
-        <!-- <img src="img/boda.jpg" alt="Boda" width="500" height="600"> -->
+        <img class="couple-photo" src="img/boda.jpg" alt="Boda">
         <p>Con nuestro amor, y con la presencia de Dios entre nosotros y la bendición de nuestros padres, 
             presentamos nuestro amor ante el Señor y deseamos compartir la alegría de nuestra unión matrimonial 
             invitándolos a la ceremonia.</p>
