boton pausar/reproducir musica

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 
         <div class="details">
             <div>
-                <div class="icon"><img src="img/anillo-de-bodas.png" alt="Anillo de Bodas" width="40" height="40"></div>
+
                 <div>
-                    <audio src="audio/boda.mp3" controls></audio>
+                    <audio id="wedding-audio" src="audio/boda.mp3" autoplay loop></audio>
+                    <button id="audio-control" class="audio-button"></button>
                 </div>
+
+                <div class="icon"><img src="img/anillo-de-bodas.png" alt="Anillo de Bodas" width="40" height="40"></div>
+                
                 <h2>Ceremonia y Recepción</h2>
                 <p>Calle José Martí, #7, <br> Colonia Escalón San Salvador CP, <br> San Salvador CP 1101 <br> Domingo, 29 de Diciembre <br> 16:00 PM</p>
                 <!-- Botón para Google Maps -->
