--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/ico"sizes="32x32" href="img/favicon.ico">
 </head>
-<body>
 
 <div class="invitation-wrapper">
     <div class="invitation">
@@ -64,6 +63,17 @@
         
         <p class="verse">"El amor jamás dejará de existir." <br> - Corintios 13:8</p>
 
+    </div>
+</div>
+
+<!-- Popup -->
+<div id="popup" class="popup" style="display: none;"> <!-- Inicialmente oculto -->
+    <div class="popup-content">
+        <h2>Bienvenido</h2>
+        <p>Estamos emocionados de compartir este día tan especial contigo.</p>
+        <button id="abrir-invitacion" class="abrir-invitacion">
+            <i class="bi bi-envelope"></i> Abrir invitación
+        </button>
     </div>
 </div>
 
