--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
                     <p>Calle José Martí, #7, <br> Colonia Escalón San Salvador CP, <br> San Salvador CP 1101 <br> Domingo,
                         29 de Diciembre <br> 04:00 PM</p>
                     <!-- Botón para Google Maps y recordatorio de fecha -->
-                    <button id="calendar-btn">Añadir al calendario</button>
                     <button onclick="window.open('https://maps.app.goo.gl/JFx4z8628YiJ4oCJ7', '_blank')">Ver en Google Maps</button>
+                    <p>Quieres tener un recordatorio de la fecha? <br> Haz clic en el botón de abajo.</p>
+                    <button id="calendar-btn">Añadir al calendario</button>
                 </div>
 
                 <!-- Nueva Sección: Recomendaciones de vestimenta y regalo -->
                 <div class="event-info">
-                    <h2>Vestimenta y Regalo</h2>
-                    <p><strong>Vestimenta:</strong> Se recomienda vestir formal para la ceremonia.</p>
-                    <p><strong>Regalo:</strong> Agradecemos tu generosidad con un regalo en sobre.</p>
+                    <p><strong>Codigo de vestimenta:</strong> Cómo te sientas más cómodo y elegante.</p>
+                    <img src="img/vestimenta.png" alt="Vestimenta" width="30" height="30">
+                    <p><strong>Sus muestras de cariño en regalo de sobre.</strong></p>
+                    <img src="img/envelope-solid.svg" alt="Regalo" width="30" height="30">
                 </div>
 
             </div>
