--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <button id="calendar-btn">Añadir al calendario</button>
                 </div>
 
-                <!-- Nueva Sección: Recomendaciones de vestimenta y regalo -->
+                <!-- Recomendaciones de vestimenta y regalo -->
                 <div class="event-info">
                     <p><strong>Codigo de vestimenta:</strong> Cómo te sientas más cómodo y elegante.</p>
                     <img src="img/vestimenta.png" alt="Vestimenta" width="30" height="30">
