--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="reproductor-musica">
                     <h1>Título</h1>
                     <p>Nombre</p>
-                    <audio id="cancion">
+                    <audio id="cancion" autoplay>
                         <source src="audio/Ed Sheeran - Thinking out Loud.mp3" type="audio/mpeg">
                     </audio>
                     <input type="range" value="0" id="progreso" />
@@ -64,6 +64,7 @@
                     <img src="img/vestimenta.png" alt="Vestimenta" width="30" height="30">
                     <p><strong>Sus muestras de cariño en regalo de sobre.</strong></p>
                     <img src="img/envelope-solid.svg" alt="Regalo" width="30" height="30">
+                    
                 </div>
 
             </div>
@@ -75,7 +76,7 @@
                     Asistencia</button>
             </div>
 
-            <p class="verse">"El amor jamás dejará de existir." <br> - Corintios 13:8</p>
+            <p class="verse">"Por tanto, lo que Dios juntó, no lo separe el hombre." <br><strong>Marcos 10:9</strong></p>
 
         </div>
     </div>
