--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="reproductor-musica">
                     <h1>Título</h1>
                     <p>Nombre</p>
-                    <audio id="cancion" autoplay>
+                    <audio id="cancion">
                         <source src="audio/Ed Sheeran - Thinking out Loud.mp3" type="audio/mpeg">
                     </audio>
                     <input type="range" value="0" id="progreso" />
