Cambiando texto del sobre

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="event-info">
                     <p><strong>Codigo de vestimenta:</strong> Cómo te sientas más cómodo y elegante.</p>
                     <img src="img/vestimenta.png" alt="Vestimenta" width="30" height="30">
-                    <p><strong>Mi mayor alegría es compartir con la familia y amigos en este día tan especial. Si tu deseo es hacernos un presente, te agradeceriamos que este sea en efectivo.</strong></p>
+                    <p><strong>Sus muestras de cariño en regalo de sobre.</strong></p>
                     <img src="img/envelope-solid.svg" alt="Regalo" width="30" height="30"> 
                 </div>
 
