Cambio de popup y retoques de responsividad

--- a/index.html
+++ b/index.html
@@ -80,16 +80,19 @@
         </div>
     </div>
 
-    <!-- Popup -->
-    <div id="popup" class="popup" style="display: none;"> <!-- Inicialmente oculto -->
-        <div class="popup-content">
-            <h2>Bienvenido</h2>
-            <p>Estamos emocionados de compartir este día tan especial contigo.</p>
-            <button id="abrir-invitacion" class="abrir-invitacion">
-                <i class="bi bi-envelope"></i> Abrir invitación
-            </button>
-        </div>
-    </div>
+    <!-- Envelope Popup -->
+  <div id="envelope-popup" class="envelope">
+    <img src="img/sobre-izquierda.png" alt="Left Side of Envelope" class="envelope-left">
+    <img src="img/sobre-derecha.png" alt="Right Side of Envelope" class="envelope-right">
+
+    <!-- Sobre de escritorio -->
+     <img src="img/escritorio-izquierda.png" alt="Left Side of Desktop" class="desktop-left">
+     <img src="img/escritorio-derecha.png" alt="Right Side of Desktop" class="desktop-right">
+     
+    <button id="open-button" class="open-btn">
+        <span class="tooltip delayed-tooltip">Abrir aquí</span>
+        <img src="img/btn-Abrir.png" alt=""></button>
+  </div>
 
     <script src="script.js"></script>
 </body>
