--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <!-- Botón para Google Maps y recordatorio de fecha -->
                     <button onclick="window.open('https://maps.app.goo.gl/JFx4z8628YiJ4oCJ7', '_blank')">Ver en Google
                         Maps</button>
-                    <p>No olvides acompañarnos, y agrega<br> un recordatorio.</p>
+                    <p>No olvides acompañarnos,<br>y agrega un recordatorio.</p>
                     <button id="calendar-btn">Añadir al calendario</button>
                 </div>
 
