--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                     </div>
 
                     <h2>Ceremonia y Recepción</h2>
-                    <p>Calle José Martí, #7, <br> Colonia Escalón San Salvador CP, <br> San Salvador CP 1101 <br>
+                    <p><strong>Calle José Martí, #7, <br> Colonia Escalón San Salvador CP, <br> San Salvador CP 1101 <br>
                         Domingo,
-                        29 de Diciembre <br> 04:00 PM</p>
+                        29 de Diciembre <br> 04:00 PM</strong></p>
                     <!-- Botón para Google Maps y recordatorio de fecha -->
                     <button onclick="window.open('https://maps.app.goo.gl/JFx4z8628YiJ4oCJ7', '_blank')">Ver en Google
                         Maps</button>
-                    <p>No olvides acompañarnos,<br>y agrega un recordatorio.</p>
+                    <p><strong>No olvides acompañarnos,<br>y agrega un recordatorio.</strong></p>
                     <button id="calendar-btn">Añadir al calendario</button>
                 </div>
 
