--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 invitándolos a la ceremonia.</p>
 
             <!-- Sección de cuenta regresiva -->
+             <p id="wedding-date"></p>
+             <h2 class="">Cuenta Regresiva</h2>
             <div class="countdown" id="countdown"></div>
-            <p id="wedding-date"></p>
+            
 
             <div class="details">
 
