Agregando nuevo estilo al contador

--- a/index.html
+++ b/index.html
@@ -20,10 +20,29 @@
                 invitándolos a la ceremonia.</p>
 
             <!-- Sección de cuenta regresiva -->
-             <p id="wedding-date"></p>
-             <h2 class="">Cuenta Regresiva</h2>
-            <div class="countdown" id="countdown"></div>
-            
+            <p id="wedding-date"></p>
+
+            <div class="countdown-wrapper">
+                <h2>CUENTA REGRESIVA</h2>
+                <div id="countdown" class="countdown-container">
+                    <div class="countdown-element">
+                        <span id="days">0</span>
+                        <div class="label">Días</div>
+                    </div>
+                    <div class="countdown-element">
+                        <span id="hours">0</span>
+                        <div class="label">Horas</div>
+                    </div>
+                    <div class="countdown-element">
+                        <span id="minutes">0</span>
+                        <div class="label">Minutos</div>
+                    </div>
+                    <div class="countdown-element">
+                        <span id="seconds">0</span>
+                        <div class="label">Segundos</div>
+                    </div>
+                </div>
+            </div>
 
             <div class="details">
 
@@ -53,9 +72,10 @@
                     </div>
 
                     <h2>Ceremonia y Recepción</h2>
-                    <p><strong>Calle José Martí, #7, <br> Colonia Escalón San Salvador CP, <br> San Salvador CP 1101 <br>
-                        Domingo,
-                        29 de Diciembre <br> 04:00 PM</strong></p>
+                    <p><strong>Calle José Martí, #7, <br> Colonia Escalón San Salvador CP, <br> San Salvador CP 1101
+                            <br>
+                            Domingo,
+                            29 de Diciembre <br>Hora: 04:00 PM</strong></p>
                     <!-- Botón para Google Maps y recordatorio de fecha -->
                     <button onclick="window.open('https://maps.app.goo.gl/JFx4z8628YiJ4oCJ7', '_blank')">Ver en Google
                         Maps</button>
