Arreglando estetica de la cuenta regresiva

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p id="wedding-date"></p>
 
             <div class="countdown-wrapper">
-                <h2>CUENTA REGRESIVA</h2>
+                <h2 id="countdown-title">CUENTA REGRESIVA</h2>
                 <div id="countdown" class="countdown-container">
                     <div class="countdown-element">
                         <span id="days">0</span>
